# mpl-modernqt

./: LICENSE  README.md  README_PyPI.md  pyproject.toml
src/mpl_modernqt/: backend.py
