[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpl-modernqt"
version = "1.6"
author = "Dr. Ing. Ariel S. Loyarte"
authors = [
  { name="Dr. Ing. Ariel S. Loyarte", email="aloyarte@frsf.utn.edu.ar" },
]
description = "Modern Qt Matplotlib backend"
readme = "README_PyPI.md"
requires-python = ">=3.8"
dependencies = [
  "qtawesome>=1.2.2",
  "matplotlib>=3.6.0",
  "darkdetect>=0.7.1",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = ["matplotlib", "backend", "plotting"]
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/aloytag/mpl-modernqt"
"Bug Tracker" = "https://github.com/aloytag/mpl-modernqt/issues"
"Repository" = "https://github.com/aloytag/mpl-modernqt"
